[package]
name = "cstring"
version = "0.0.3"
authors = ["Richard Anaya"]
edition = "2018"
license = "MIT"
description = "A super simple cstring library for web assembly"
categories = ["wasm", "no-std"]

[dependencies.cstr_core]
git = "https://github.com/richardanaya/cstr_core.git"
version = "0.1.2"
features = ["alloc"]