[package]
name = "cstring"
version = "0.0.3"
authors = ["Richard Anaya"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A super simple cstring library for web assembly"
categories = ["wasm", "no-std"]

[dependencies]
cty = "0.2"
memchr = { version = "2.0", default-features = false }	

[features]
default = ["alloc"]
alloc = []